--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "server.js",
   "dependencies": {
     "@types/node": "^20.11.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^135.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mime": "^3.0.0",
     "mongodb": "^6.3.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
