--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node server.ts"
+    "start": "nodemon server.ts"
   },
   "keywords": [
     "Node",
