--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^135.0.0",
     "jsonwebtoken": "^9.0.2",
     "mime": "^3.0.0",
     "mongodb": "^6.3.0",
